Add environment for launching unit/integration test...
- installing of wp-core files was moved to Makefile
- added PHP-library yoast/phpunit-polyfills ^1.0
- added phpunit.xml
- removed mu-loader.php file

--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,8 @@
 		}
 	},
 	"require-dev": {
-		"johnpbloch/wordpress-core": "^5.8",
-		"phpunit/phpunit": "^9",
-		"symfony/var-dumper": "^5.3"
+		"phpunit/phpunit": "^7",
+		"symfony/var-dumper": "^5.3",
+		"yoast/phpunit-polyfills": "^1.0"
 	}
 }
